pp2/samples/tested/inheritance.decaf.test

*** Error line 3.
  Animal mother;
  ^^^^^^
*** syntax error

